[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/World/WorldMap.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/KapustaControlNode.gd" type="Script" id=2]
[ext_resource path="res://Scenes/World/Upgrades.gd" type="Script" id=3]
[ext_resource path="res://Scenes/World/BiddingArea.gd" type="Script" id=4]
[ext_resource path="res://Scenes/World/Tasks.gd" type="Script" id=5]
[ext_resource path="res://Scenes/World/StateProcessing.gd" type="Script" id=6]
[ext_resource path="res://Scenes/World/Map/CapturePoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/World/Map.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[sub_resource type="CircleShape2D" id=4]
radius = 300.0

[sub_resource type="CircleShape2D" id=5]
radius = 200.0

[sub_resource type="CircleShape2D" id=6]
radius = 300.0

[sub_resource type="CircleShape2D" id=7]
radius = 300.0

[sub_resource type="CircleShape2D" id=8]
radius = 300.0

[sub_resource type="CircleShape2D" id=9]
radius = 300.0

[sub_resource type="CircleShape2D" id=10]
radius = 200.0

[sub_resource type="CircleShape2D" id=11]
radius = 300.0

[sub_resource type="CircleShape2D" id=12]
radius = 200.0

[sub_resource type="CircleShape2D" id=13]
radius = 300.0

[sub_resource type="CircleShape2D" id=14]
radius = 200.0

[sub_resource type="CircleShape2D" id=15]
radius = 200.0

[sub_resource type="CircleShape2D" id=16]
radius = 300.0

[sub_resource type="CircleShape2D" id=17]
radius = 300.0

[node name="WorldMap" type="Node"]
script = ExtResource( 1 )

[node name="PlayersNode" type="Node" parent="."]

[node name="BiddingArea" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BidTime" type="Timer" parent="BiddingArea"]
wait_time = 10.0
one_shot = true

[node name="KapustaControlNode" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Upgrades" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Tasks" type="Node" parent="."]
script = ExtResource( 5 )

[node name="StateProcessing" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="StateProcessing"]
wait_time = 0.05

[node name="Map" type="Node" parent="."]
script = ExtResource( 8 )

[node name="CapturePoint3" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -1385, 676 )

[node name="CollisionShape2D" parent="Map/CapturePoint3" index="0"]
shape = SubResource( 1 )

[node name="CapturePoint4" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -1737, -851 )
selection = 0

[node name="CollisionShape2D" parent="Map/CapturePoint4" index="0"]
shape = SubResource( 2 )

[node name="CapturePoint5" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -2841, -308 )
selection = 0

[node name="CollisionShape2D" parent="Map/CapturePoint5" index="0"]
shape = SubResource( 3 )

[node name="CapturePoint6" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -2631, 700 )

[node name="CollisionShape2D" parent="Map/CapturePoint6" index="0"]
shape = SubResource( 4 )

[node name="CapturePoint7" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -1047, 1689 )
selection = 0

[node name="CollisionShape2D" parent="Map/CapturePoint7" index="0"]
shape = SubResource( 5 )

[node name="CapturePoint8" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 128, 1305 )

[node name="CollisionShape2D" parent="Map/CapturePoint8" index="0"]
shape = SubResource( 6 )

[node name="CapturePoint9" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 779, 493 )

[node name="CollisionShape2D" parent="Map/CapturePoint9" index="0"]
shape = SubResource( 7 )

[node name="CapturePoint10" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -367, -249 )

[node name="CollisionShape2D" parent="Map/CapturePoint10" index="0"]
shape = SubResource( 8 )

[node name="CapturePoint11" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -545, -1301 )

[node name="CollisionShape2D" parent="Map/CapturePoint11" index="0"]
shape = SubResource( 9 )

[node name="CapturePoint12" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 833, -1258 )
selection = 0

[node name="CollisionShape2D" parent="Map/CapturePoint12" index="0"]
shape = SubResource( 10 )

[node name="CapturePoint13" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 1412, -303 )

[node name="CollisionShape2D" parent="Map/CapturePoint13" index="0"]
shape = SubResource( 11 )

[node name="CapturePoint14" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 1933, 1006 )
selection = 0

[node name="CollisionShape2D" parent="Map/CapturePoint14" index="0"]
shape = SubResource( 12 )

[node name="CapturePoint15" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -2275, 1775 )

[node name="CollisionShape2D" parent="Map/CapturePoint15" index="0"]
shape = SubResource( 13 )

[node name="CapturePoint16" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -3108, 1764 )
selection = 0

[node name="CollisionShape2D" parent="Map/CapturePoint16" index="0"]
shape = SubResource( 14 )

[node name="CapturePoint17" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -2211, 2693 )
selection = 0

[node name="CollisionShape2D" parent="Map/CapturePoint17" index="0"]
shape = SubResource( 15 )

[node name="CapturePoint18" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 1965, -1183 )

[node name="CollisionShape2D" parent="Map/CapturePoint18" index="0"]
shape = SubResource( 16 )

[node name="CapturePoint19" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 1730, -2187 )

[node name="CollisionShape2D" parent="Map/CapturePoint19" index="0"]
shape = SubResource( 17 )

[connection signal="timeout" from="BiddingArea/BidTime" to="BiddingArea" method="_on_BidTime_timeout"]
[connection signal="timeout" from="StateProcessing/Timer" to="StateProcessing" method="_on_Timer_timeout"]

[editable path="Map/CapturePoint3"]
[editable path="Map/CapturePoint4"]
[editable path="Map/CapturePoint5"]
[editable path="Map/CapturePoint6"]
[editable path="Map/CapturePoint7"]
[editable path="Map/CapturePoint8"]
[editable path="Map/CapturePoint9"]
[editable path="Map/CapturePoint10"]
[editable path="Map/CapturePoint11"]
[editable path="Map/CapturePoint12"]
[editable path="Map/CapturePoint13"]
[editable path="Map/CapturePoint14"]
[editable path="Map/CapturePoint15"]
[editable path="Map/CapturePoint16"]
[editable path="Map/CapturePoint17"]
[editable path="Map/CapturePoint18"]
[editable path="Map/CapturePoint19"]
